# Digital-Library

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
apps/books/: admin.py  documents.py  tests.py  urls_v2.py
apps/books/migrations/: 0001_add_genre_model.py  0002_add_author_model.py  0003_add_book_model.py  0004_alter_book_author_alter_book_genre.py
apps/books/models/: __init__.py  author.py  book.py
apps/books/serializers/: __init__.py  author_serializer.py  book_serializer.py  genre_serializer.py
apps/books/views/: __init__.py  authors_endpoint.py  books_endpoint.py  genres_endpoint.py  (+1 more)
apps/comments/: admin.py  apps.py  tests.py  urls_v3.py
apps/libraries/: admin.py  apps.py  documents.py  tests.py  urls_v4.py
apps/users/: admin.py  errors.py  urls_v1.py
core/: __init__.py  constants.py  scripts.py
core/loggers/: __init__.py  logger.py
core/permissions/: __init__.py  users_permissions.py
core/utils/: datetime_utils.py  exception_handler.py  strings_utils.py
internals/: asgi.py  celery.py  urls.py  wsgi.py
internals/helpers/: __init__.py  get_views_service.py
internals/middlewares/: __init__.py  request_response_logging_middleware.py
scripts/: run_script.py  run_seeds.py
scripts/one_time_scripts/: import_data.py
scripts/seeds/: admins.py  authors.py  book_instances.py  books.py  comments.py  genres.py  libraries.py  ratings.py  user_libraries.py
settings/: common.py  development.py  production.py  staging.py
swagger/: __init__.py  swagger_json_builder.py  swagger_view.py
swagger/openapi/: index.json
(+111 files in other folders)
